@@ -98,7 +98,7 @@ class JobRunrEventSchedulerTest {
         await().atMost(Duration.ofSeconds(2)).until(() -> !publishedMessages.isEmpty());
         assertEquals(1, publishedMessages.size());
 
-        EventMessage<?> publishedMessage = publishedMessages.get(0);
+        EventMessage<?> publishedMessage = publishedMessages.getFirst();
 
         assertEquals(1, publishedMessage.getPayload());
         assertTrue(rightAfterSchedule.isBefore(publishedMessage.getTimestamp()));
@@ -112,14 +112,14 @@ class JobRunrEventSchedulerTest {
         await().atMost(Duration.ofSeconds(2)).until(() -> !publishedMessages.isEmpty());
         assertEquals(1, publishedMessages.size());
 
-        EventMessage<?> publishedMessage = publishedMessages.get(0);
+        EventMessage<?> publishedMessage = publishedMessages.getFirst();
 
         assertEquals(1, publishedMessage.getPayload());
     }
 
     @Test
     void whenScheduleIsCalledWithEventMessageMetadataShouldBePreserved() {
-        Map<String, Object> metadata = new HashMap<>();
+        Map<String, String> metadata = new HashMap<>();
         metadata.put("foo", "bar");
         EventMessage<?> originalMessage =
                 new GenericEventMessage<>(new MessageType("event"), 2, metadata);
@@ -129,7 +129,7 @@ class JobRunrEventSchedulerTest {
         await().atMost(Duration.ofSeconds(2)).until(() -> !publishedMessages.isEmpty());
         assertEquals(1, publishedMessages.size());
 
-        EventMessage<?> publishedMessage = publishedMessages.get(0);
+        EventMessage<?> publishedMessage = publishedMessages.getFirst();
 
         assertEquals(2, publishedMessage.getPayload());
         assertTrue(rightAfterSchedule.isBefore(publishedMessage.getTimestamp()));
@@ -144,7 +144,7 @@ class JobRunrEventSchedulerTest {
         await().atMost(Duration.ofSeconds(2)).until(() -> !publishedMessages.isEmpty());
         assertEquals(1, publishedMessages.size());
 
-        EventMessage<?> publishedMessage = publishedMessages.get(0);
+        EventMessage<?> publishedMessage = publishedMessages.getFirst();
 
         assertEquals(new PayloadWithRevision(), publishedMessage.getPayload());
         assertTrue(rightAfterSchedule.isBefore(publishedMessage.getTimestamp()));
@@ -153,7 +153,7 @@ class JobRunrEventSchedulerTest {
 
     @Test
     void whenScheduleIsCalledWithEventThatHasARevisionPayloadMessageMetadataShouldBePreserved() {
-        Map<String, Object> metadata = new HashMap<>();
+        Map<String, String> metadata = new HashMap<>();
         metadata.put("foo", "bar");
         EventMessage<?> originalMessage = new GenericEventMessage<>(
                 new MessageType("message"), new PayloadWithRevision(), metadata
@@ -164,7 +164,7 @@ class JobRunrEventSchedulerTest {
         await().atMost(Duration.ofSeconds(2)).until(() -> !publishedMessages.isEmpty());
         assertEquals(1, publishedMessages.size());
 
-        EventMessage<?> publishedMessage = publishedMessages.get(0);
+        EventMessage<?> publishedMessage = publishedMessages.getFirst();
 
         assertEquals(new PayloadWithRevision(), publishedMessage.getPayload());
         assertTrue(rightAfterSchedule.isBefore(publishedMessage.getTimestamp()));
@@ -179,7 +179,7 @@ class JobRunrEventSchedulerTest {
         await().atMost(Duration.ofSeconds(2)).until(() -> !publishedMessages.isEmpty());
         assertEquals(1, publishedMessages.size());
 
-        EventMessage<?> publishedMessage = publishedMessages.get(0);
+        EventMessage<?> publishedMessage = publishedMessages.getFirst();
         assertEquals(4, publishedMessage.getPayload());
     }
 
@@ -191,7 +191,7 @@ class JobRunrEventSchedulerTest {
         await().atMost(Duration.ofSeconds(2)).until(() -> !publishedMessages.isEmpty());
         assertEquals(1, publishedMessages.size());
 
-        EventMessage<?> publishedMessage = publishedMessages.get(0);
+        EventMessage<?> publishedMessage = publishedMessages.getFirst();
         assertEquals(6, publishedMessage.getPayload());
     }
 
